#1582 Add support for individual bean archives in CDI/Weld
Signed-off-by: arjantijms <arjan.tijms@gmail.com>